# whqlsp-detector

./: .gitignore  detectar_palabras.py  main.py  pyproject.toml
lsp-annotator/: iniciar.bat  iniciar.command  main.py  pyproject.toml
lsp-annotator/annotations/: Copia de 00025.json  Copia de 00030.json  Copia de 00033.json  Copia de 00046.json  Copia de 00052.json  Copia de 00071.json  Copia de 00072.json  Copia de 00079.json  Copia de 00264.json  Copia de 00272.json  DONDE_1711.json  output.json  que1_01.json  test.json  videoplayback.json
lsp-annotator/annotations/EXTRAS/: Copia de mc 1.json  Copia de mc 2.json  Copia de mc 3.json  Copia de mc 4.json  Copia de mc 5.json  Copia de mc 6.json
lsp-annotator/annotations/TRADUCCIONES Y JUICIOS/CLAUDIA/: Copia de 00025.json  Copia de 00026.json  Copia de 00027.json  Copia de 00028.json  Copia de 00029.json  Copia de 00030.json  Copia de 00031.json  Copia de 00032.json  Copia de 00033.json  Copia de 00034.json  Copia de 00035.json
lsp-annotator/annotations/videos_carpeta/QUE/: que1_01.json
lsp-annotator/frontend/: index.html
notebooks/: 01_normalizing_video_data.ipynb  02_video_landmarks_extraction.ipynb  03_data_augmentation.ipynb  04_entrenamiento.ipynb  05_deteccion_video.ipynb  test.py  test_corto_detecciones.json
notebooks/.ipynb_checkpoints/: 01_normalizing_video_data-checkpoint.ipynb  03_data_augmentation-checkpoint.ipynb  04_entrenamiento-checkpoint.ipynb  05_deteccion_video-checkpoint.ipynb
