[project]
name = "lsp-annotator"
version = "0.1.0"
description = "Herramienta de anotación de señas WH en Lengua de Señas Peruana"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "opencv-python>=4.13.0.92",
    "mediapipe==0.10.9",
    "scikit-learn>=1.7.2",
]
